fix: elasticsearch queries